--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "slackclone",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://dmeneses2013.github.io/SlackCloneReact",
   "dependencies": {
     "aphrodite": "^2.3.1",
     "circular-json": "^0.5.9",
     "flow-bin": "^0.93.0",
+    "gh-pages": "^2.0.1",
     "giphy-api": "^2.0.1",
     "lodash": "^4.17.11",
     "md5": "^2.2.1",
@@ -30,7 +32,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
