--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-redux": "^6.0.1",
     "react-router": "4.2.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^2.1.5",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0"
